--- a/src/s1-main/App.module.css
+++ b/src/s1-main/App.module.css
@@ -1,11 +1,35 @@
 .App {
     --header_height: 60px;
+    font-family: 'Montserrat'
+
 }
 
 .hw {
+    position: absolute;
+    width: 100%;
+    height: 373px;
+    left: 0px;
+    top: 144px;
 
+    border: 1px solid #D9D9D9;
+
+    padding: 0px 70px 0px 70px;
 }
 
 .hwTitle {
+    position: absolute;
+    width: 165px;
+    height: 27px;
+    left: 70px;
+    top: 107px;
 
+
+    font-style: normal;
+    font-weight: 600;
+    font-size: 22px;
+    line-height: 27px;
+    /* identical to box height */
+
+
+    color: #000000;
 }
