--- a/src/s2-homeworks/hw01/friend-message/FriendMessage.module.css
+++ b/src/s2-homeworks/hw01/friend-message/FriendMessage.module.css
@@ -1,17 +1,35 @@
 .friendMessage {
-
+    display: flex;
+    flex-direction: column;
+    text-align: left;
+    font-size: 16px;
+    position: relative;
 }
 
 .friendImageAndText {
 
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    padding-top: 20px;
+
 }
 
 .friendImageAndText img {
-
+    width: 48px;
+    height: 48px;
+    float: left;
+    margin: 10px;
 }
 
 .friendText {
-
+    background: #F5F7FB;
+    box-shadow: 0px 5px 20px rgb(29 33 38 / 3%), 0px 1px 2px rgb(29 33 38 / 10%);
+    width: auto;
+    float: left;
+    padding: 7px;
+    color: black;
+    border-radius: 9px;
 }
 
 .friendText:after {
@@ -19,6 +37,7 @@
 }
 
 .friendName {
+    font-weight: 600;
 
 }
 
@@ -27,5 +46,10 @@
 }
 
 .friendTime {
+    font-size: 10px;
+    line-height: 12px;
 
+    position: absolute;
+    left: 23px;
+    top: 80px;
 }
