--- a/src/s2-homeworks/hw01/message/Message.module.css
+++ b/src/s2-homeworks/hw01/message/Message.module.css
@@ -1,16 +1,37 @@
 .message {
+    display: flex;
+    flex-direction: column;
+    text-align: right;
+    font-size: 16px;
+    position: relative;
 
 }
 
 .imageAndText {
-
+    display: flex;
+    align-items: center;
+    flex-direction: row-reverse;
+    gap: 10px;
+    padding-top: 20px;
 }
 
 .imageAndText img {
+    width: 48px;
+    height: 48px;
+    float: right;
+    margin: 10px;
+
 
 }
 
 .text {
+    background: #0066CC;
+    box-shadow: 0px 5px 20px rgb(29 33 38 / 3%), 0px 1px 2px rgb(29 33 38 / 10%);
+    width: auto;
+    float: right;
+    padding: 7px;
+    color: white;
+    border-radius: 9px;
 
 }
 
@@ -19,6 +40,7 @@
 }
 
 .name {
+    font-weight: 600;
 
 }
 
@@ -27,5 +49,11 @@
 }
 
 .time {
+    font-size: 10px;
+    line-height: 12px;
+
+    position: absolute;
+    right: 23px;
+    top: 80px;
 
 }
