--- a/src/s2-homeworks/hw01/message-sender/MessageSender.module.css
+++ b/src/s2-homeworks/hw01/message-sender/MessageSender.module.css
@@ -1,16 +1,13 @@
 .sendForm {
     display: flex;
-    gap: 40px;
-    justify-content: center;
+    justify-content: space-between;
 }
 
 .textarea {
-    position: absolute;
-    width: 976px;
+    width: 1195px;
     height: 40px;
-    left: 70px;
-    top: 308px;
     padding: 10px;
+    margin-top: 50px;
 
     background: #F5F7FB;
     box-shadow: 0px 5px 20px rgba(29, 33, 38, 0.03), 0px 1px 2px rgba(29, 33, 38, 0.1);
@@ -18,11 +15,9 @@
 }
 
 .button {
-    position: absolute;
-    width: 120px;
+    width: 150px;
     height: 40px;
-    left: 1090px;
-    top: 308px;
+    margin-top: 50px;
 
     background: #0066CC;
     border-radius: 20px;
